--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "autoprefixer": "^10.2.0",
     "next": "10.0.5",
+    "next-on-netlify": "^2.7.2",
     "postcss": "^8.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
