--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "pokedex",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "postbuild": "next-on-netlify"
-  },
-  "dependencies": {
-    "autoprefixer": "^10.2.0",
-    "next": "10.0.5",
-    "next-on-netlify": "^2.7.2",
-    "postcss": "^8.2.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.1.0",
-    "tailwindcss": "^2.0.2"
-  }
+    "name": "pokedex",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build && next export",
+        "start": "next start",
+        "postbuild": "next-on-netlify"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.2.0",
+        "next": "10.0.5",
+        "next-on-netlify": "^2.7.2",
+        "postcss": "^8.2.3",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-icons": "^4.1.0",
+        "tailwindcss": "^2.0.2"
+    }
 }
